Removed controllers, fixed routes, Kotlin magic
